--- a/src/assets/static/sass/main.scss
+++ b/src/assets/static/sass/main.scss
@@ -4,12 +4,10 @@
     /* Fix Mo-jS */
 }
 
-.vue-typer {
-    font-family: Copperplate, 'Copperplate Gothic Light', fantasy;
-}
-
-.vue-typer .custom.caret {
-    display: none;
+.k-border {
+    border-radius: 10px;
+    padding: 5px;
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 input {
@@ -18,6 +16,10 @@ input {
 
 .border15 {
     border-radius: 15px;
+}
+
+.brust {
+    z-index: 9999;
 }
 
 .login-screen-content {
@@ -38,6 +40,11 @@ input {
 
 .modal {
     box-shadow: 0 0 13px rgba(0, 0, 0, 0.5);
+}
+
+.popover {
+    background: rgba(255, 255, 255, 1);
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 
