--- a/src/assets/static/sass/main.scss
+++ b/src/assets/static/sass/main.scss
@@ -18,10 +18,6 @@ input {
     border-radius: 15px;
 }
 
-.brust {
-    z-index: 9999;
-}
-
 .login-screen-content {
     background-image: url('../images/hinhnen.jpg');
     background-size: cover;
@@ -406,7 +402,8 @@ input {
     stroke: #111111;
 }
 
-.tab-link {
+
+/* .tab-link {
     &.active:not(.offline),
     &.active:not(.online) {
         background-color: rgba(1, 18, 25, 0.1);
@@ -564,3 +561,4 @@ input {
         width: 46px;
     }
 }
+ */
